# voxify

./: LICENSE  README.md  pyproject.toml
voxify/: model.ipynb
